--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -1,12 +1,81 @@
-\documentclass{article}
+\documentclass[10.9pt]{article}
 
-\usepackage[utf8]{inputenc} % un package
-\usepackage[T1]{fontenc}      % un second package
-\usepackage[francais]{babel}  % un troisième package
+\usepackage[french]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage{fancyhdr}
+\usepackage{lastpage}
 \usepackage{graphicx}
+\usepackage[T1]{fontenc}
+\usepackage{amsmath,amssymb}
+\usepackage{fullpage}
+\usepackage{url}
+\usepackage{xspace}
+
 \usepackage{listings}
-\usepackage[usenames, dvipsnames]{color}
-\usepackage{framed}
+\lstset{
+  morekeywords={abort,abs,accept,access,all,and,array,at,begin,body,
+    case,constant,declare,delay,delta,digits,do,else,elsif,end,entry,
+    exception,exit,for,function,generic,goto,if,in,is,limited,loop,
+    mod,new,not,null,of,or,others,out,package,pragma,private,
+    procedure,raise,range,record,rem,renames,return,reverse,select,
+    separate,subtype,task,terminate,then,type,use,when,while,with,
+    xor,abstract,aliased,protected,requeue,tagged,until},
+  sensitive=f,
+  morecomment=[l]--,
+  morestring=[d]",
+  showstringspaces=false,
+  basicstyle=\small\ttfamily,
+  keywordstyle=\bf\small,
+  commentstyle=\itshape,
+  stringstyle=\sf,
+  extendedchars=true,
+  columns=[c]fixed
+}
+
+% CI-DESSOUS: conversion des caractères accentués UTF-8 
+% en caractères TeX dans les listings...
+\lstset{
+  literate=%
+  {À}{{\`A}}1 {Â}{{\^A}}1 {Ç}{{\c{C}}}1%
+  {à}{{\`a}}1 {â}{{\^a}}1 {ç}{{\c{c}}}1%
+  {É}{{\'E}}1 {È}{{\`E}}1 {Ê}{{\^E}}1 {Ë}{{\"E}}1% 
+  {é}{{\'e}}1 {è}{{\`e}}1 {ê}{{\^e}}1 {ë}{{\"e}}1%
+  {Ï}{{\"I}}1 {Î}{{\^I}}1 {Ô}{{\^O}}1%
+  {ï}{{\"i}}1 {î}{{\^i}}1 {ô}{{\^o}}1%
+  {Ù}{{\`U}}1 {Û}{{\^U}}1 {Ü}{{\"U}}1%
+  {ù}{{\`u}}1 {û}{{\^u}}1 {ü}{{\"u}}1%
+}
+
+%%%%%%%%%%
+% TAILLE DES PAGES (A4 serré)
+
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{1ex}
+\setlength{\textwidth}{17cm}
+\setlength{\textheight}{24cm}
+\setlength{\oddsidemargin}{-.7cm}
+\setlength{\evensidemargin}{-.7cm}
+\setlength{\topmargin}{-.5in}
+
+%%%%%%%%%%
+% EN-TÊTES ET PIED DE PAGES
+
+%% \pagestyle{fancyplain}
+\renewcommand{\headrulewidth}{0pt}
+\addtolength{\headheight}{1.6pt}
+\addtolength{\headheight}{2.6pt}
+\lfoot{}
+\cfoot{\footnotesize\sf TPL Algo - Nœuds}
+\rfoot{\footnotesize\sf page~\thepage/\pageref{LastPage}}
+\lhead{}
+
+
+%%%%%%%%%%
+% COMMANDES PERSONNALISEES
+\newcommand{\shellcmd}[1]{\\\indent\indent\texttt{\footnotesize\# #1}\\}
+
+%%%%%%%%%%
+% TITRE DU DOCUMENT
 
 \title{Rapport de Projet Algo -- Nœud}
 \author{\textsc{Benjamin Lebit} - \textsc{Pierre Thalamy}}
@@ -16,9 +85,47 @@
 
 \maketitle
 
-\section {Utilisation}
+\section {Vue d'ensemble du projet}
+Tous d'abord, nous avons bien implémenté dans notre programme tout ce
+que décrivait l'énoncé. Cependant, nous avons décidé de supporter à la
+fois le nouage selon l'angle \b{max} et \b{min}. C'est pourquoi, afin
+d'exécuter le programme, il faudra utiliser la commande :
+\shellcmd{./noeuds banana\_X.kn output.svg min} 
+pour tracer selon l'angle minimum, ou, pour l'angle maximum :
+\shellcmd{./noeuds banana\_X.kn output.svg max} 
+
+Le projet comprend 6 modules :
+\begin{enumerate}
+\item \em{Noeuds} : Le main faisant appels aux procédures de tous
+  les autres modules.
+\item \em{Objets} : Comprend les définitions de tous les objets et
+  structures de données utilisées dans le projet, ainsi que des
+  procédures pour en afficher le contenu.
+\item \em{Liste} : Le module de gestion de liste, plus de détails en
+  section 2.
+\item \em{Parseur} : Procédures d'extraction des données des fichiers
+  d'entrée pour stockage dans les structures appropriées.
+\item \em{Traitement} : Contient les procédures d'exploitation des
+  données stockées (Calculs des points de contrôle, milieu
+  suivant...).
+\item \em{Svg} : Réalise le tracé intermédiaire et coordonne le tracé des nœuds.
+\end{enumerate}
 
 \section {Modélisation des données}
+La structure de donnée principale du programme est \em{Tab\_Sommets},
+un tableau indexé de 1 au nombre de sommet du programme et qui stocke
+des elements de types \em{Sommet}. Un sommet est un \em{Point}, de
+coordonnée \em{X, Y}, et une liste chaîné de voisins. \\
+Cette liste, nommé \em{Liste\_Voisin}, contient pour chaque cellule,
+un element de type \em{Arrete}, ainsi que l'indice du voisin qui lui
+est associée, afin de la repérer aisément. \\
+Enfin, une \em{Arrete} contient l'ID du sommet qui la stocke et celui
+qui lui est opposé, ainsi que les points de contrôle de chacun sur
+cette arrète. On stocke aussi le milieu et la longueur du sommet, pour
+éviter d'avoir à les recalculer à chaque utilisation. L'inconvénient
+principal de ce choix de structure est que le stockage des arrètes est
+redondant. Le sommet 1 aura dans sa liste l'arrête 1--2, et 2 aura
+2--1 dans sa liste.
 
 \section {Tracé intermédiaire}
 
