--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -1,4 +1,4 @@
-\documentclass[10.9pt]{article}
+\documentclass[12pt]{article}
 
 \usepackage[french]{babel}
 \usepackage[utf8]{inputenc}
@@ -87,8 +87,8 @@
 
 \section {Vue d'ensemble du projet}
 Tous d'abord, nous avons bien implémenté dans notre programme tout ce
-que décrivait l'énoncé. Cependant, nous avons décidé de supporter à la
-fois le nouage selon l'angle \b{max} et \b{min}. C'est pourquoi, afin
+que décrivait l'énoncé. Cependant, nous avons en plus décidé de supporter à la
+fois le tracé des nœuds selon l'angle \b{max} et \b{min}. C'est pourquoi, afin
 d'exécuter le programme, il faudra utiliser la commande :
 \shellcmd{./noeuds banana\_X.kn output.svg min} 
 pour tracer selon l'angle minimum, ou, pour l'angle maximum :
@@ -96,51 +96,64 @@ pour tracer selon l'angle minimum, ou, pour l'angle maximum :
 
 Le projet comprend 6 modules :
 \begin{enumerate}
-\item \em{Noeuds} : Le main faisant appels aux procédures de tous
+\item \emph{Noeuds} : Le main faisant appels aux procédures de tous
   les autres modules.
-\item \em{Objets} : Comprend les définitions de tous les objets et
+\item \emph{Objets} : Comprend les définitions de tous les objets et
   structures de données utilisées dans le projet, ainsi que des
   procédures pour en afficher le contenu.
-\item \em{Liste} : Le module de gestion de liste, plus de détails en
+\item \emph{Liste} : Le module de gestion de liste, plus de détails en
   section 2.
-\item \em{Parseur} : Procédures d'extraction des données des fichiers
+\item \emph{Parseur} : Procédures d'extraction des données des fichiers
   d'entrée pour stockage dans les structures appropriées.
-\item \em{Traitement} : Contient les procédures d'exploitation des
+\item \emph{Traitement} : Contient les procédures d'exploitation des
   données stockées (Calculs des points de contrôle, milieu
   suivant...).
-\item \em{Svg} : Réalise le tracé intermédiaire et coordonne le tracé des nœuds.
+\item \emph{Svg} : Réalise le tracé intermédiaire et coordonne le tracé des nœuds.
 \end{enumerate}
 
 \section {Modélisation des données}
-La structure de donnée principale du programme est \em{Tab\_Sommets},
+La structure de donnée principale du programme est \emph{Tab\_Sommets},
 un tableau indexé de 1 au nombre de sommet du programme et qui stocke
-des elements de types \em{Sommet}. Un sommet est un \em{Point}, de
-coordonnée \em{X, Y}, et une liste chaîné de voisins. \\
-Cette liste, nommé \em{Liste\_Voisin}, contient pour chaque cellule,
-un element de type \em{Arrete}, ainsi que l'indice du voisin qui lui
+des elements de types \emph{Sommet}. Un sommet est un \emph{Point}, de
+coordonnée \emph{X, Y}, et une liste chaîné de voisins. \\
+Cette liste, nommé \emph{Liste\_Voisin}, contient pour chaque cellule,
+un element de type \emph{Arrete}, ainsi que l'indice du voisin qui lui
 est associée, afin de la repérer aisément. \\
-Enfin, une \em{Arrete} contient l'ID du sommet qui la stocke et celui
+Enfin, une \emph{Arrete} contient l'ID du sommet qui la stocke et celui
 qui lui est opposé, ainsi que les points de contrôle de chacun sur
-cette arrète. On stocke aussi le milieu et la longueur du sommet, pour
+cette arête. On stocke aussi le milieu et la longueur du sommet, pour
 éviter d'avoir à les recalculer à chaque utilisation. L'inconvénient
-principal de ce choix de structure est que le stockage des arrètes est
-redondant. Le sommet 1 aura dans sa liste l'arrête 1--2, et 2 aura
+principal de ce choix de structure est que le stockage des arêtes est
+redondant. Le sommet 1 aura dans sa liste l'arête 1--2, et 2 aura
 2--1 dans sa liste.
 
 \section {Tracé intermédiaire}
 L'ensemble du tracé est assuré par la fonction Sauvegarde du paquet svg.
 \\
-Le tracé intermédiaire du graphe (arrête et croix sur leurs milieux) est effectué après le parsage du fichier kn d'entré par la fonction
-Trace\verb+_+Intermediare du paquet svg, prenant en argument le tableau de sommets rempli précédemment. Nous avons choisi de tracer les croix en bleu pour une meilleur distinction sur le rendu svg.\\
+Le tracé intermédiaire du graphe (arêtes et croix sur leurs milieux) est effectué après le parsing du fichier kn d'entré par la fonction
+\emph{Trace\_Intermediaire} du paquet svg, à partir du tableau de
+sommets rempli précédemment, et des points de contrôle générés par la
+procédure \emph{Stocker\_Points\_De\_Controle} du module
+\emph{Traitement}. 
+Nous avons choisi de tracer les croix en bleu pour une meilleur
+distinction avec les arêtes sur le rendu svg.\\
 \\
-Les arrêtes sont par ailleurs tracées deux fois du fait de la présence de l'indexe du voisin j du sommet i et inversement. Cela aurait compliqué le code que d'éliminer cette redondance, le double tracé des arrêtes n'étant pas par ailleurs gênant sur le rendu svg ni pour la suite du tracé.
+Afin d'éviter de tracer deux fois les arêtes à cause de la redondance
+évoquée dans la section précédente, on utilise un tableau de marquage à deux
+dimensions, de même indexation que le tableau de sommets. Avant de
+tracer l'arête I--J, on vérifie que T(I, J) et T(J, I) vaut \emph{false},
+sinon on ignore.
 \section {Tracé des nœuds}
-Le tracé des nœuds est effectué par la procedure Trace\verb+_+nœuds du paquet svg.On commence le tracé à partir du premier sommet du tableau de sommets dans lequel on a stocké les données parsées. Cette fonction appelle d'autres procédures de calcul du paquet traitement pour calculer et/ou récupérer les coordonnees de 4 points :
+Le tracé des nœuds est effectué par la procedure \emph{Trace\_Noeuds} du
+paquet \emph{Svg}.On commence le tracé à partir de la première arête du premier sommet du tableau de sommets. Cette fonction appelle d'autres procédures de calcul du paquet traitement pour calculer et/ou récupérer les coordonnées de 4 points :
 \begin{itemize}
-\item Ceux du point de départ, le milieu de l'arrête courante du sommet considéré.
-\item Ceux du point d'arrivé, récupéré par l'intermediaire de l'arrete cible, elle même déterminée par l'angle fait avec l'arrête courante (le sens de celui-ci dépendera du sens de rotation, défini par le booléen Trig). L'arrête cible sera choisie si l'angle qu'elle fait avec l'arrête courante est minimum ou maximum (selon la valeur du booléen Min passée en argument lors de l'exécution).
-\item Ceux du point de contrôle de départ qui dépenderont du sommet considéré sur l'arrête courante ainsi que du sens dans lequel sera calculé l'angle (valeur du booléen Trig).
-\item Ceux du point de contrôle d'arrivée qui dépenderont du sommet considéré sur l'arrête cible ainsi que du sens de rotation
+\item Ceux du point de départ, le milieu de l'arête courante du sommet considéré.
+\item Ceux du point d'arrivé, récupéré par l'intermediaire de l'arrete cible, elle même déterminée par l'angle fait avec l'arête courante (le sens de celui-ci dépendera du sens de rotation, défini par le booléen Trig). L'arête cible sera choisie si l'angle qu'elle fait avec l'arête courante est minimum ou maximum (selon la valeur du booléen Min passée en argument lors de l'exécution).
+\item Ceux du point de contrôle de départ qui dépenderont du sommet considéré sur l'arête courante ainsi que du sens dans lequel sera calculé l'angle (valeur du booléen Trig).
+\item Ceux du point de contrôle d'arrivée qui dépenderont du sommet considéré sur l'arête cible ainsi que du sens de rotation.
 \end{itemize}
-Une fois calculés, ces coordonnées seront utilisées dans la fonction Trace\verb+_+Bezier pour le tracé des noeuds. Le compteur C sera initialisé à 0 et indiquera la fin du tracé quand il aura atteint la valeur 2$\times$(Nombre\verb+_+Sommets-1) contenus dans le fichier kn.
+Une fois calculés, ces coordonnées seront utilisées dans la fonction
+\emph{Trace\_Bezier} pour le tracé des nœuds dans le fichier de sortie. 
+Afin de déterminé la fin du tracé, nous incrémentons à chaque tracé un
+compteur allant de 0 à 2$\times$(Nombre\verb+_+Sommets-1). 
 \end{document}
